Fixed bug when common super class is one of the two passed by parameter.
Former-commit-id: 98ee71fcac59b386244ec60905a9fa1a58ba792e

--- a/src-test-unit/Makefile
+++ b/src-test-unit/Makefile
@@ -1,30 +1,50 @@
 
+CLASSPATH=classes/
+TESTNAME=testParser
+
 INCLUDE=../src
 BUILD=../build
 
 EXE=test-unit
 HPPS=$(wildcard $(INCLUDE)/*.hpp)
-SRCS=$(wildcard jnif/*.java) $(wildcard *.cpp)
+SRCS=$(wildcard *.cpp)
 OBJS=$(SRCS:%=$(BUILD)/%.o)
 CFLAGS += -fPIC -W -O0 -Wall -Wextra -I$(INCLUDE) 
-#-fopenmp
 
-#CLSS=$(shell find . -name "*.class")
+JAVAS=$(wildcard jnif/*.java)
+CLSS=$(JAVAS:%.java=$(BUILD)/classes/test/%.class)
+
+LIST=$(shell cd $(BUILD) && ./$(EXE) --list)
 
 .PHONY: compile
-compile: $(BUILD)/$(EXE)
+compile: $(BUILD)/$(EXE) $(CLSS)
+
+.PHONY: list
+list: compile
+	cd $(BUILD) && ./$(EXE) --list
+
+.PHONY: all
+all: compile
+	cd $(BUILD) && $(foreach t,$(LIST),./$(EXE) $(CLASSPATH) $(t) > $(EXE).log;)
 
 .PHONY: run
-run: compile
-	cd $(BUILD) && ./$(EXE)
+run: compile $(BUILD)/classes/rt $(BUILD)/classes/dacapo $(BUILD)/classes/dacapo-jars
+	cd $(BUILD) && ./$(EXE) $(CLASSPATH) $(TESTNAME) > $(EXE).log
+
+$(BUILD)/classes/rt:
+	unzip rt.jar -d $@
+
+$(BUILD)/classes/dacapo:
+	unzip ../eval/dacapo-9.12-bach.jar -d $@
+
+$(BUILD)/classes/dacapo-jars: $(BUILD)/classes/dacapo
+	unzip -o '$(BUILD)/classes/dacapo/jar/*.jar' -d $@
+
+$(BUILD)/classes/test/%.class: %.java | $(BUILD)
+	javac -d $(BUILD)/classes/test/ $<
 
 $(BUILD)/$(EXE): $(OBJS) $(BUILD)/libjnif.a
 	clang++ $(CFLAGS) -fsanitize=leak -stdlib=libc++ -o $@ $^
-
-$(BUILD)/%.java.o: %.java | $(BUILD)
-	javac -d $(BUILD)/ $<
-	cd $(BUILD) ; xxd -include $*.class $*.c
-	$(LINK.c) -c -o $@ $(BUILD)/$*.c
 
 $(BUILD)/%.cpp.o: %.cpp $(HPPS) | $(BUILD)
 	$(LINK.c) -std=c++11 -stdlib=libc++ -c -o $@ $<
@@ -34,7 +54,11 @@ $(BUILD)/libjnif.a: FORCE
 
 $(BUILD):
 	mkdir -p $(BUILD)
-	mkdir -p $(BUILD)/instr
+	mkdir -p $(BUILD)/classes/test
+
+.PHONY: clean
+clean:
+	rm -rf $(BUILD)
 
 .PHONY: FORCE
 FORCE:
