--- a/src-instrserver/.project
+++ b/src-instrserver/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>fr-instr</name>
+	<name>fr-instrserver</name>
 	<comment></comment>
 	<projects>
 	</projects>
