--- a/Makefile.local
+++ b/Makefile.local
@@ -1,9 +1,6 @@
 
-JAVA=java
-#JVMARGS=-Xverify:all -Xprof -Xdiag -Xcheck:jni -Xfuture -XX:+PrintCompilation -verbose:class1 -verbose:gc -verbose:jni
-#JVMARGS=-Xverify:all
-#-Xcheck:jni -verbose:jni
-JAVAC=javac -g:none
-
 # Mac OS X
 JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_21.jdk/Contents/Home
+
+# Linux
+JAVA_HOME=/usr/lib/jvm/java-6-openjdk-amd64
