--- a/Makefile.local
+++ b/Makefile.local
@@ -1,6 +1,6 @@
 
 # Mac OS X
-#JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_21.jdk/Contents/Home
+JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_21.jdk/Contents/Home
 
 # Linux
 #JAVA_HOME=/usr/lib/jvm/java-6-openjdk-amd64
