--- a/Makefile.local.template
+++ b/Makefile.local.template
@@ -12,11 +12,11 @@ ifeq ($(UNAME), Darwin)
   #CXXFLAGS+=-stdlib=libc++
   #CXXFLAGS+=-std=c++11
   CXXFLAGS+=-std=c++0x
-  
   JAVA_HOME=$(shell /usr/libexec/java_home)
   R=r
 else ifeq ($(UNAME), Linux)
   CXXFLAGS+=-std=c++0x
+  CXXFLAGS+=-lrt
   JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
   R=R
 else
