Work in progress for invokedynamic instruction type checking.
Former-commit-id: f92343ceb32224399c7ab55c369c797ebe3f65c9

--- a/Makefile.local.template
+++ b/Makefile.local.template
@@ -17,6 +17,7 @@ ifeq ($(UNAME), Darwin)
 else ifeq ($(UNAME), Linux)
   CXXFLAGS+=-std=c++0x
   CXXFLAGS+=-lrt
+  CXXFLAGS+=-D USE_MUTEX
   JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
   R=R
 else
