--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,38 +6,20 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories( src-libjnif )
 
 set(SOURCE_FILES
-        src-libjnif/analysis/ComputeFrames.hpp
-        src-libjnif/analysis/FrameGenerator.hpp
-        src-libjnif/analysis/SmtBuilder.hpp
-        src-libjnif/jar/ioapi.cpp
-        src-libjnif/jar/ioapi.h
-        src-libjnif/jar/unzip.cpp
-        src-libjnif/jar/unzip.h
-        src-libjnif/Arena.cpp
-        src-libjnif/parser/BootstrapMethodsAttrParser.hpp
-        src-libjnif/parser/BufferReader.hpp
-        src-libjnif/parser/ClassFileParser.cpp
-        src-libjnif/parser/ClassParser.hpp
-        src-libjnif/parser/CodeAttrParser.hpp
-        src-libjnif/parser/ConstPoolParser.hpp
-        src-libjnif/parser/ExceptionsAttrParser.hpp
-        src-libjnif/parser/LabelManager.hpp
-        src-libjnif/parser/LineNumberTableAttrParser.hpp
-        src-libjnif/parser/LocalVariableTableAttrParser.hpp
-        src-libjnif/parser/LocalVariableTypeTableAttrParser.hpp
-        src-libjnif/parser/SignatureAttrParser.hpp
-        src-libjnif/parser/SourceFileAttrParser.hpp
-        src-libjnif/parser/StackMapTableAttrParser.hpp
-        src-libjnif/BasicBlock.cpp
-        src-libjnif/ControlFlowGraph.cpp
+        src-libjnif/zip/ioapi.cpp
+        src-libjnif/zip/ioapi.h
+        src-libjnif/zip/unzip.cpp
+        src-libjnif/zip/unzip.h
+        src-libjnif/parser.cpp
         src-libjnif/Dominator.hpp
-        src-libjnif/Error.cpp
-        src-libjnif/Frame.cpp
+        src-libjnif/base.cpp
         src-libjnif/jnif.hpp
         src-libjnif/printer.cpp
         src-libjnif/writer.cpp
-        src-libjnif/stream/ClassFileStream.cpp
-        src-libjnif/jar/jar.cpp src-libjnif/model.cpp)
+        src-libjnif/stream.cpp
+        src-libjnif/jar.cpp
+        src-libjnif/model.cpp
+        src-libjnif/analysis.cpp)
 
 add_library(jnif ${SOURCE_FILES})
 add_executable(jnifp src-jnifp/jnifp.cpp)
