Added zip directly to jnif

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,9 @@ project(jnif)
 
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(src-zip)
 include_directories(src-libjnif)
 
-set(SOURCE_FILES
+add_library(jnif
         src-libjnif/parser.cpp
         src-libjnif/Dominator.hpp
         src-libjnif/base.cpp
@@ -16,15 +15,15 @@ set(SOURCE_FILES
         src-libjnif/stream.cpp
         src-libjnif/jar.cpp
         src-libjnif/model.cpp
-        src-libjnif/analysis.cpp)
+        src-libjnif/analysis.cpp
+        src-libjnif/zip/ioapi.cpp
+        src-libjnif/zip/ioapi.h src-libjnif/zip/unzip.cpp src-libjnif/zip/unzip.h)
 
-add_library(zip src-zip/ioapi.cpp src-zip/ioapi.h src-zip/unzip.cpp src-zip/unzip.h)
-add_library(jnif ${SOURCE_FILES})
 add_executable(jnifp src-jnifp/jnifp.cpp)
 add_executable(testunit src-testunit/testunit.cpp)
 add_executable(testjars src-testjars/testjars.cpp src-testjars/tests.cpp src-testjars/tests.hpp)
 
-target_link_libraries (jnif z zip)
-target_link_libraries (jnifp jnif)
-target_link_libraries (testunit jnif)
-target_link_libraries (testjars jnif)
+target_link_libraries(jnif z)
+target_link_libraries(jnifp jnif)
+target_link_libraries(testunit jnif)
+target_link_libraries(testjars jnif)
