Added gitlab runner to build jnif on the server

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,3 +13,10 @@ pages:
     - public
   only:
   - master
+
+build:
+        script:
+        - mkdir cmake-build-debug
+        - cd cmake-build-debug
+        - cmake ..
+        - make
