--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ pages:
 build:
         before_script:
         - apk update
-        - apk add cmake
+        - apk add make cmake
         script:
         - mkdir cmake-build-debug
         - cd cmake-build-debug
