Updated docs url on readme

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,12 +15,14 @@ pages:
   - master
 
 build:
-        before_script:
-        - apk update
-        - apk add gcc g++ make cmake
-        - apk add openjdk8
-        script:
-        - mkdir cmake-build-debug
-        - cd cmake-build-debug
-        - cmake ..
-        - make
+  before_script:
+  - apk update
+  - apk add gcc g++ make cmake
+  - apk add openjdk8
+  script:
+  - mkdir cmake-build-debug
+  - cd cmake-build-debug
+  - cmake ..
+  - make
+  only:
+  - master
